second update to  ami jenkins file

--- a/jenkins-files/create-ami/Jenkinsfile
+++ b/jenkins-files/create-ami/Jenkinsfile
@@ -10,7 +10,8 @@ pipeline {
         stage ('build web ami') {
            steps {
             dir ('../../packer-ami') {
-                sh 'ls'
+                sh 'pwd'
+                sh 'ls -ltr'
                 sh 'packer init .'
                 sh 'packer fmt .'
                 sh 'packer validate .'
