--- a/jenkins-files/create-ami/Jenkinsfile
+++ b/jenkins-files/create-ami/Jenkinsfile
@@ -16,6 +16,7 @@ pipeline {
 
         stage ('build web ami') {
            steps {
+            sh 'ls -ltr'
             dir ('../../packer-ami') {
                 sh 'pwd'
                 sh 'ls -ltr'
