--- a/jenkins-files/create-ami/Jenkinsfile
+++ b/jenkins-files/create-ami/Jenkinsfile
@@ -29,7 +29,9 @@ pipeline {
         }
          stage ('build app ami') {
            steps {
-            dir ('../../packer-ami') {
+            dir ('packer-ami') {
+                sh 'pwd'
+                sh 'ls -ltr'
                 sh 'packer fmt .'
                 sh 'packer validate .'
                 sh 'packer build app-ami.pkr.hcl'
