fifth update to  terraform jenkins file

--- a/jenkins-files/build-infrstructure/Jenkinsfile
+++ b/jenkins-files/build-infrstructure/Jenkinsfile
@@ -8,6 +8,12 @@ pipeline {
     }
 
     stages {
+        stage ('checkout') {
+            steps {
+                git branch: 'main',
+                url: 'https://github.com/ayodelebwj/week-7-project.git'
+            }
+        }
         stage ('terraform init') {
             steps {
                 dir ('terraform-infrastructure') {
