updated terraform jenkins file

--- a/jenkins-files/build-infrastructure/Jenkinsfile
+++ b/jenkins-files/build-infrastructure/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
             steps {
                 sh 'pwd'
                 sh 'ls -ltr'
-                dir ('build-infrastructure') {
+                dir ('terraform-infrastructure') {
                     sh 'terraform init'
                     sh 'terraform fmt .'
                     sh 'terraform validate .'
@@ -28,7 +28,7 @@ pipeline {
 
         stage ('terraform plan') {
             steps {
-                dir ('build-infrastructure') {
+                dir ('terraform-infrastructure') {
                     sh 'terraform plan'
                 }
             }
@@ -36,7 +36,7 @@ pipeline {
 
         stage ('terraform apply') {
             steps {
-                dir ('build-infrastructure') {
+                dir ('terraform-infrastructure') {
                     sh 'terraform apply --auto-approve'
                 }
             }
