added destroy stage to terraform pipeline

--- a/jenkins-files/build-infrastructure/Jenkinsfile
+++ b/jenkins-files/build-infrastructure/Jenkinsfile
@@ -41,6 +41,13 @@ pipeline {
                 }
             }
         }
+        stage ('terraform destroy') {
+            steps {
+                dir ('terraform-infrastructure') {
+                    sh 'terraform destroy --auto-approve'
+                }
+            }
+        }
     }
 
     post {
